<resources>
    <string name="app_name">GitUser</string>
    <string name="gituser_logo">GitUser Logo</string>
    <string name="search_username">Search Username</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="_num">100</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="showing_results">Showing %d results</string>
    <string name="no_users_found">No users found.</string>
    <string name="developer">© 2022 Dhika</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="change_theme">Change Theme Color</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
</resources>